k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: 638436445856.dkr.ecr.eu-west-1.amazonaws.com/vitvik_ecr_back_images        
        ports:
        - containerPort: 3001
