k8s/test_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: vitvik-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-container
        image: nginx:latest
        ports:
        - containerPort: 80
