k8s/test_serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: vitvik-example
spec:
  type: ClusterIP #LoadBalancer
  selector:
    app: test-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
