k8s/ingres_backend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vitvik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: vitvik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: 638436445856.dkr.ecr.eu-west-1.amazonaws.com/vitvik_ecr_back_images        
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: vitvik
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: vitvik
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: backend-service
            port:
              number: 80
